# task-manager

./: README.md  my_nginx.conf
DBManager/: CMakeLists.txt  Creator.cpp  Creator.h  Fields.h  Manager.cpp  Manager.h  Object.cpp  Object.h  User.cpp  User.h  main.cpp
ORM/: CMakeLists.txt  main.cpp
ORM/Wrapper/: CMakeLists.txt  Cursor.cpp  Cursor.h  Manager.cpp  Manager.h  main.cpp
Project/: CMakeLists.txt  DatabaseManager.h  HttpServer.h  Invoker.h  Project.h  Receiver.cpp  Receiver.h  Task.h  User.h  main.cpp
Project/commands/: ConcreteCommand.cpp  ConcreteCommand.h  CreateProjectCommand.h  CreateTaskCommand.h  DeleteProjectCommand.h  DeleteTaskCommand.h  EditProjectCommand.h  EditTaskCommand.h  ICommand.h
Project/commands/exceptions/: FieldIsMissedException.h
Project/database/: CMakeLists.txt  Connection.cpp  Connection.h  Manager.cpp  Manager.h  Query.cpp  Query.h  ResultSet.cpp  ResultSet.h  main.cpp
Project/notifier/: CMakeLists.txt  main.cpp
main/: CMakeLists.txt  Controller.cpp  Controller.h  Meta.h  Request.h  Storage.cpp  Storage.h  TaskQuery.cpp  Types.h  commands.h  database_config.txt  main.cpp
main/commands/: BaseCommand.h  CreateProjectCommand.h  CreateTaskCommand.h  DeleteProjectCommand.h  DeleteTaskCommand.h  EditProjectCommand.h  EditTaskCommand.h  GetProjectCommand.h  GetProjectListPage.h  GetTaskCommand.h  IndexCommand.h  TaskCommand.h
main/connection/: Connection.cpp  Connection.h  ResultSet.cpp  ResultSet.h  main.cpp
main/connection/exceptions/: CursorIndexExceedsException.h
main/controller/: Controller.cpp  Controller.h  Request.h  commands.h
main/controller/commands/: BaseCommand.cpp  BaseCommand.h  CreateProjectCommand.h  CreateProjectSuccessCommand.h  CreateTaskCommand.h  CreateTaskCommandSuccess.h  CreateUserCommand.h  DeleteProjectCommand.h  DeleteUserCommand.h  EditProjectCommand.h  EditTaskCommand.h  EnterUserCommand.h  GetProjectCommand.h  GetProjectListPage.h  GetTaskCommand.h  IndexCommand.h  UserSuccessCommand.h
main/controller/commands/exceptions/: FailedAuthException.h  NoFormParameterException.h  PasswordMismatchException.h  UsernameMismatchException.h
main/database/: Storage.cpp  Storage.h
main/database/connection/: CMakeLists.txt  Connection.cpp  Connection.h  ResultSet.cpp  ResultSet.h
main/database/connection/exceptions/: BadQueryException.h  CMakeLists.txt
main/database/exceptions/: EmptyCreateQueryException.h  NoSuchFieldException.h
main/model/: Manager.h  Model.h  Types.h
main/models/: Task.h  TaskManager.cpp
main/objects/: BaseObject.h  ResultSetCompose.h
main/objects/base/: BaseObject.h  BaseSet.h  Meta.h  ResultSetCompose.h  Set.h  StorageAccess.h  StorageQuickAccess.h
main/objects/base/exceptions/: NoneObjectException.h
main/objects/project/: Project.cpp  Project.h  ProjectMeta.cpp
main/objects/task/: Task.cpp  Task.h  TaskMeta.cpp  TaskSet.h
main/objects/user/: User.cpp  User.h  UserMeta.cpp
main/orm/: main.cpp
main/orm/fields/: DateField.h
main/orm/fields/validators/: CharValidator.h
main/orm/models/: Model.h
main/templates/: project.html
main/web-server/: asyncserver.h  getter.cpp  parsers.h  server.cpp
main/web-server/beastserver/: HttpServer.cpp  HttpServer.h  Listener.cpp  Listener.h  RequestHandler.cpp  RequestHandler.h  Session.cpp  Session.h  libraries.h  server.cpp
main/web_template_engine/: .gitignore  CMakeLists.txt  FileToStringConverter.h  Renderer.cpp  Renderer.h  main.cpp
main/web_template_engine/exceptions/: FileNotOpenException.h
main/web_template_engine/templater/: baseRender.h  mainRender.h  projectRender.h  render.h  taskRender.h
main/web_template_engine/templates/: addProject.html  addTask.html  base.html  home.html  login.html  loginSuccess.html  mainPage.html  project.html  projectSuccess.html  projectsList.html  registry.html  task.html  taskSuccess.html
main_logic/: CMakeLists.txt  Controller.cpp  Controller.h  Request.h
main_logic/commands/: BaseCommand.h  CreateProjectCommand.h  EditTaskCommand.h
main_logic/commands/exceptions/: IdIsNotFoundException.h
main_logic/connection/: Connection.h  Cursor.h  main.cpp
main_logic/models/: MainManager.cpp  MainManager.h  Model.h  Task.h
main_logic/models/managers/: ObjectManager.h
orm/: CMakeLists.txt  ManagerPool.h  Task.cpp  Task.h  TemplateManager.h  main.cpp
orm/connection/: CMakeLists.txt  Connection.cpp  Connection.h  Cursor.cpp  Cursor.h  main.cpp
orm/connection/exceptions/: PGException.h
orm/fields/: BaseField.h  CharField.cpp  CharField.h  DateField.h  DateTimeField.h  Field.h  IntegerField.cpp  IntegerField.h  TextField.h  TimeField.h
orm/fields/template/: CharField.h  DateField.h  DateTimeField.h  Field.h  IntegerField.h  Text.h  TextField.h  TimeField.h
orm/fields/template/validators/: BaseValidator.h  CharValidator.h  DateValidator.h  IntegerValidator.h  TextValidator.h  Validator.h
orm/fields/validators/: BaseValidator.h  CharValidator.h  DateTimeValidator.h  DateValidator.h  IntegerValidator.cpp  IntegerValidator.h  TextValidator.h  TimeValidator.h  Validator.h
orm/models/: Manager.h  Model.h  Set.h
orm/models/managers/: Manager-Impl.cpp  Manager.h  Meta.h  _Manager.h
orm/objects/: Project.cpp  Project.h  Task.cpp  Task.h
orm/objects/managers/: BaseManager.cpp  BaseManager.h  ProjectManager.cpp  ProjectManager.h  TaskManager.cpp  TaskManager.h
orm/objects/managers/meta/: Meta.h
tests/: CMakeLists.txt  CreateProjectCommand_Test.h  CreateTaskCommand_Test.h  DeleteProjectCommand_Test.h  DeleteTaskCommand_Test.h  EditProjectCommand_Test.h  EditTaskCommand_Test.h  main.cpp
web-server/: CMakeLists.txt  asyncserver.cpp  asyncserver.h  getter.h  server.cpp
web-server/beastserver/: server.cpp
web_template_engine/: TaskStruct.h
web_template_engine/rendered/: mainOut.html  projectListOut.html  projectOut.html  taskOut.html
web_template_engine/templater/: projectListRender.h  render.h  taskRender.h  test.h
web_template_engine/templates/: base.html
